--- a/style.css
+++ b/style.css
@@ -16,5 +16,21 @@ body {
   justify-content: center;
   overflow: hidden;
   margin: 0;
+  background-image: url("image-1.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: 0.4s ease;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
 }
 /* End: Global Styles */
