add style to slides in style.css file

--- a/style.css
+++ b/style.css
@@ -34,3 +34,48 @@ body::before {
   z-index: -1;
 }
 /* End: Global Styles */
+
+.slider-container {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  height: 70vh;
+  width: 70vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  opacity: 0;
+  height: 100vh;
+  width: 100vw;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: -15vh;
+  left: -15vw;
+  transition: 0.4s ease;
+  z-index: 1;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.slide:nth-child(1) {
+  background-image: url("image-1.jpg");
+}
+
+.slide:nth-child(2) {
+  background-image: url("image-2.jpg");
+}
+
+.slide:nth-child(3) {
+  background-image: url("image-3.jpg");
+}
+
+.slide:nth-child(4) {
+  background-image: url("image-4.jpg");
+}
+
+.slide:nth-child(5) {
+  background-image: url("image-5.jpg");
+}
