add style to left/right arrows in style.css file

--- a/style.css
+++ b/style.css
@@ -79,3 +79,27 @@ body::before {
 .slide:nth-child(5) {
   background-image: url("image-5.jpg");
 }
+
+.arrow {
+  position: fixed;
+  background-color: transparent;
+  color: #fff;
+  padding: 20px;
+  font-size: 30px;
+  border: 2px solid orange;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.arrow:focus {
+  outline: none;
+}
+
+.left-arrow {
+  left: calc(15vw - 65px);
+}
+
+.right-arrow {
+  right: calc(15vw - 65px);
+}
